# classwork

./: .gitignore
CS010A/Programming Assignment 1/: main.cpp
CS010A/Programming Assignment 2/: main.cpp
CS010A/SI/: main.cpp
CS010BSI/Programming Assignment 1/: main.cpp
CS010BSI/Programming Assignment 2/: main.cpp
CS010BSI/Programming Assignment 3/: ItemToPurchase.cpp  ItemToPurchase.h  main.cpp  (+3 more)
CS100/: 09-20-2021-meeting-notes.txt
CS100/Labs/LAB05/: .gitignore  CMakeLists.txt  main.cpp
CS100/Labs/LAB05/headers/: Add.hpp  Base.hpp  Mock.hpp  Op.hpp  Pow.hpp  Sub.hpp  imports.hpp
CS100/Labs/LAB05/src/: Add.cpp  main.cpp
CS100/Labs/LAB05/tests/: add_test.hpp  div_test.hpp  mult_test.hpp  op_test.hpp  pow_test.hpp  rand_test.hpp  sub_test.hpp  unit_test.cpp
CS100/Labs/LAB07/: .gitignore  CMakeLists.txt  main.cpp
CS100/Labs/LAB07/headers/factory/: ExpressionFactory.hpp  StandardExpressionFactory.hpp
CS100/Labs/LAB07/headers/product/: Base.hpp  Div.hpp  Mult.hpp  Rand.hpp
CS100/Labs/LAB07/src/: ExpressionFactory1.cpp
CS100/Labs/LAB07/src/product/: Div.cpp  Mult.cpp  Pow.cpp  Rand.cpp  Sub.cpp
CS100/Labs/LAB07/tests/: unit_tests.cpp
CS100/Labs/LAB08/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
CS100/Labs/LAB08/headers/: Add.hpp  Base.hpp  Div.hpp  Mock.hpp  Mult.hpp  Op.hpp  Pow.hpp  Rand.hpp  Sub.hpp  VisitorLaTeX.hpp  VisitorMathML.hpp  iterator.hpp  visitor.hpp
CS100/Labs/LAB08/src/: Add.cpp  Div.cpp  Mult.cpp  Pow.cpp  Rand.cpp  Sub.cpp  VisitorLaTeX.cpp  VisitorMathML.cpp  iterator.cpp
CS100/Labs/LAB08/tests/: iterator_tests.hpp  latex_tests.hpp  mathml_tests.hpp  unit_tests.cpp
CS100/Labs/LAB7/: CMakeLists.txt  main.cpp
CS100/Labs/LAB7/headers/factory/: ExpressionFactory.hpp
CS100/Labs/LAB7/headers/product/: Add.hpp  Base.hpp  Div.hpp  Mock.hpp  Mult.hpp  Op.hpp  Pow.hpp  Rand.hpp  Sub.hpp  imports.hpp
CS100/Labs/LAB7/src/factory/: ExpressionFactory.cpp
CS100/Labs/LAB7/src/product/: Add.cpp  Div.cpp  Mult.cpp  Pow.cpp  Rand.cpp  Sub.cpp  main.cpp
CS100/Labs/LAB7/tests/: unit_tests.cpp
CS111/: Office hours questions.txt  what to study.txt
CS170/AStar/: .gitignore  ASTar  CMakeLists.txt  README.md  main.cpp  unit_test.cpp
CS170/AStar/headers/: Board.hpp  GameDriver.hpp  HeuristicStrategy.hpp  Node.hpp  Problem.hpp  Queue.hpp
CS170/AStar/src/: Board.cpp  GameDriver.cpp  HeuristicStrategy.cpp  Problem.cpp  Queue.cpp
CS170/AStar/tests/: boardTestChild.hpp  boardTestClear.hpp  boardTestConstructors.hpp  boardTestDraw.hpp  boardTestSetStage.hpp  problemTestConstructors.hpp  problemTestDepth.hpp  problemTestExpand.hpp  problemTestHeight.hpp  problemTestHeuristic.hpp  problemTestSize.hpp  problemTestTreeHeight.hpp  queueTests.hpp  testtest.hpp
CS170/Classification/: .gitignore  CMakeLists.txt  README.md  analysis.ipynb  large_data_forward_trace.txt  main_part1.cpp  main_part2.cpp  main_part3.cpp  run3
CS170/Classification/headers/: ClassifierDriver.hpp  Dataset.hpp  Driver.hpp  FullDriver.hpp  Graph.hpp  NearestNeighbors.hpp  Point.hpp  Subset.hpp  Validator.hpp
CS170/Classification/src/: ClassifierDriver.cpp  Dataset.cpp  Driver.cpp  FullDriver.cpp  Graph.cpp  NearestNeighbors.cpp  Validator.cpp
CS201/: .main.dot  main.c  main.ll
PHYS040C/: 09-23-2021-Lecture-Notes.txt  Office Hours Questions.txt
SOC151/: Week 1 – Worksheet.docx  Week 3 – Worksheet.docx
(+541 files in other folders)
